--- a/home.html
+++ b/home.html
@@ -90,7 +90,7 @@ $("input#cpassword").on({
         <span class="icon-bar" style="background-color:#4496d2"></span>
         <span class="icon-bar" style="background-color:#4496d2"></span>
       </button>
-      <a class="navbar-brand"  style="color:#4492d2;font-size:40px" id="col" href="home"><img src="images/logo4.png" alt="Care For You" width="227" height="56"/></a>
+      <a class="navbar-brand"  style="color:#4492d2;font-size:40px" id="col" href="home"><img src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/logo4.png" alt="Care For You" width="227" height="56"/></a>
     
     </div>
 
