--- a/home.html
+++ b/home.html
@@ -90,7 +90,7 @@ $("input#cpassword").on({
         <span class="icon-bar" style="background-color:#4496d2"></span>
         <span class="icon-bar" style="background-color:#4496d2"></span>
       </button>
-      <a class="navbar-brand"  style="color:#4492d2;font-size:40px" id="col" href="home"><img src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/logo4.png" alt="Care For You" width="227" height="56"/></a>
+      <a class="navbar-brand"  style="color:#4492d2;font-size:40px" id="col" href="home"><img src="https://cloud.githubusercontent.com/assets/5588651/10889529/8b191868-81b8-11e5-8c1b-249d0110a64e.png" alt="Care For You" width="227" height="56"/></a>
     
     </div>
 
