--- a/home.html
+++ b/home.html
@@ -243,13 +243,13 @@ $("input#cpassword").on({
   <div class="col-sm-1" ></div>
     <div id="try" class="col-sm-5" style="background-color:;">
       <h3 align="center"><b>Diseases</b></h3>
-      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="images/diseases1.png" alt="Diseases"></div>
+      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="https://cloud.githubusercontent.com/assets/5588651/10889639/2a720d98-81b9-11e5-8992-d8542512d6ce.png" alt="Diseases"></div>
       <div class="col-sm-6"><p style="text-align:center;" >Want to know about the causes, symptoms and prevention of a <b>Disease</b>? <span style="color:#4496d2" ><a href="diseases">Click here</a></span>
       </p></div>
     </div>
     <div id="try" class="col-sm-5" style="background-color:">
      <h3 align="center"><b>Medicines</b></h3>
-      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="images/medicine2.png" alt="Medicines"></div>
+      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="https://cloud.githubusercontent.com/assets/5588651/10889713/8c0fc4f0-81b9-11e5-9755-1066735e6315.png" alt="Medicines"></div>
       <div class="col-sm-6"><p style="text-align:center;">To get the details of a <b>Medicine</b> and its trade names, <span style="color:#4496d2" ><a href="medicine">click here</a></span>
       </p>
       </div>   
@@ -261,13 +261,13 @@ $("input#cpassword").on({
   <div class="col-sm-1"></div>
     <div id="try" class="col-sm-5" style="background-color:">
       <h3 align="center"><b>Doctors</b></h3>
-      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="images/doctor1.png" alt="Doctors"></div>
+      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="https://cloud.githubusercontent.com/assets/5588651/10889733/a72a6ce0-81b9-11e5-9437-3d2bcfb5594c.png" alt="Doctors"></div>
       <div class="col-sm-6"><p style="text-align:center;">Find <b>Doctors</b> and their hospitals according to your illness <span style="color:#4496d2" ><a href="doctor">here</a></span>
       </p></div>
     </div>
     <div id="try" class="col-sm-5" style="background-color:">
      <h3 align="center"><b>News</b></h3>
-      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="images/news2.png" alt="News"></div>
+      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="https://cloud.githubusercontent.com/assets/5588651/10889745/b9d3ad34-81b9-11e5-9a43-7b6caa256c9a.png" alt="News"></div>
       <div class="col-sm-6"><p style="text-align:center;">Stay updated about the recent <b>News </b>related to health and medicine <span style="color:#4496d2" ><a href="news">Click here</a></span> to read!
       </p>
       </div>   
