--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Home|CARE FOR YOU</title>
-<link rel="icon" type="image/iconx" href="images/logo.png">
+<link rel="icon" type="image/iconx" href="https://github.com/shubhampatwa/careforyou/blob/master/public/images/logo.png?raw=true">
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 <link rel="stylesheet" href="/vendor/formvalidation/dist/css/formValidation.min.css">
 <script type="text/javascript" src="/vendor/formvalidation/dist/js/language/languagecode_COUNTRYCODE.js"></script>
@@ -159,43 +159,43 @@ $("input#cpassword").on({
 <!--wrapper-->
 <div class="carousel-inner " role="listbox">
   <div class="item active" >
-    <img src="images/first.png"  alt="care for you"/>
+    <img src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/first.png?raw=true"  alt="care for you"/>
     <div class="carousel-caption">
       <p></p>
     </div>
     </div>
     <div class="item">
-    <img id="img" src="images/second.png"  alt="care for you"/>
+    <img id="img" src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/second.png?raw=true"  alt="care for you"/>
     <div class="carousel-caption">
       <p></p>
     </div>
     </div>
     <div class="item">
-    <img src="images/diseases2.png" alt="care of you"/>
+    <img src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/diseases2.png?raw=true" alt="care of you"/>
     <div class="carousel-caption">
       <p></p>
     </div>
     </div>
     <div class="item">
-    <img src="images/medicine1.png"/>
+    <img src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/medicine1.png?raw=true"/>
     <div class="carousel-caption">
       <p></p>
     </div>
     </div>
     <div class="item">
-    <img src="images/forum3.png"/>
+    <img src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/forum3.png?raw=true"/>
     <div class="carousel-caption">
       <p></p>
     </div>
     </div>
     <div class="item">
-    <img src="images/news1.png"/>
+    <img src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/news1.png?raw=true"/>
     <div class="carousel-caption">
       <p></p>
     </div>
     </div>
     <div class="item">
-    <img src="images/doctor2.png"/>
+    <img src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/doctor2.png?raw=true"/>
     <div class="carousel-caption">
       <div class="container">
         <div class="col-sm-3" style="color:#000000;">
@@ -209,7 +209,7 @@ $("input#cpassword").on({
     </div>
     </div>
     <div class="item">
-    <img src="images/quiz2.png"/>
+    <img src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/quiz2.png?raw=true"/>
     <div class="carousel-caption">
       <p></p>
     </div>
@@ -243,13 +243,13 @@ $("input#cpassword").on({
   <div class="col-sm-1" ></div>
     <div id="try" class="col-sm-5" style="background-color:;">
       <h3 align="center"><b>Diseases</b></h3>
-      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="https://cloud.githubusercontent.com/assets/5588651/10889639/2a720d98-81b9-11e5-8992-d8542512d6ce.png" alt="Diseases"></div>
+      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/diseases1.png?raw=true" alt="Diseases"></div>
       <div class="col-sm-6"><p style="text-align:center;" >Want to know about the causes, symptoms and prevention of a <b>Disease</b>? <span style="color:#4496d2" ><a href="diseases">Click here</a></span>
       </p></div>
     </div>
     <div id="try" class="col-sm-5" style="background-color:">
      <h3 align="center"><b>Medicines</b></h3>
-      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="https://cloud.githubusercontent.com/assets/5588651/10889713/8c0fc4f0-81b9-11e5-9755-1066735e6315.png" alt="Medicines"></div>
+      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/medicine2.png?raw=true" alt="Medicines"></div>
       <div class="col-sm-6"><p style="text-align:center;">To get the details of a <b>Medicine</b> and its trade names, <span style="color:#4496d2" ><a href="medicine">click here</a></span>
       </p>
       </div>   
@@ -261,13 +261,13 @@ $("input#cpassword").on({
   <div class="col-sm-1"></div>
     <div id="try" class="col-sm-5" style="background-color:">
       <h3 align="center"><b>Doctors</b></h3>
-      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="https://cloud.githubusercontent.com/assets/5588651/10889733/a72a6ce0-81b9-11e5-9437-3d2bcfb5594c.png" alt="Doctors"></div>
+      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/doctor1.png?raw=true" alt="Doctors"></div>
       <div class="col-sm-6"><p style="text-align:center;">Find <b>Doctors</b> and their hospitals according to your illness <span style="color:#4496d2" ><a href="doctor">here</a></span>
       </p></div>
     </div>
     <div id="try" class="col-sm-5" style="background-color:">
      <h3 align="center"><b>News</b></h3>
-      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="https://cloud.githubusercontent.com/assets/5588651/10889745/b9d3ad34-81b9-11e5-9a43-7b6caa256c9a.png" alt="News"></div>
+      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/news2.png?raw=true" alt="News"></div>
       <div class="col-sm-6"><p style="text-align:center;">Stay updated about the recent <b>News </b>related to health and medicine <span style="color:#4496d2" ><a href="news">Click here</a></span> to read!
       </p>
       </div>   
@@ -277,13 +277,13 @@ $("input#cpassword").on({
   <div class="col-sm-1"></div>
     <div id="try"class="col-sm-5" style="background-color:">
       <h3 align="center"><b>Forum</b></h3>
-      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="images/forum1.png" alt="Forum"></div>
+      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/forum1.png?raw=true" alt="Forum"></div>
       <div class="col-sm-6"><p style="text-align:center;">Register yourself and discuss your health-related queries in the <b>Forum.</b> <span style="color:#4496d2" ><a href="forum"> Click here </a></span>to go to forum!
       </p></div>
     </div>
     <div id="try" class="col-sm-5" style="background-color:">
      <h3 align="center"><b>Quiz</b></h3>
-      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="images/quiz1.png" alt="Quiz"></div>
+      <div class="col-sm-6" align="center"><img class="img-responsive img-circle img-thumbnail" src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/quiz1.png?raw=true" alt="Quiz"></div>
       <div class="col-sm-6"><p style="text-align:center;" >Want to check your knowledge about health and medicine? <span style="color:#4496d2" ><a href="quiz">Click here </a></span>to take the <b>Quiz!</b>
       </p>
       </div>   
@@ -348,10 +348,10 @@ $("input#cpassword").on({
         </address>
       </li>
       <li style="display:inline"><strong style="font-size:14px; color:#a2dcf4"> Follow us: </strong></li>
-        <li style="display:inline"><a href="#" title="facebook"><img   class="" src="images/fbicon1.png" onmouseover="this.src='images/fbicon2.png'" onmouseout="this.src='images/fbicon1.png'"></a></li>
-         <li style="display:inline"><a href="#" title="twitter"><img class="" src="images/twicon1.png" onmouseover="this.src='images/twicon2.png'" onmouseout="this.src='images/twicon1.png'"></a></li>
-        <li style="display:inline"><a href="#" title="linkedin"><img class="" src="images/liicon1.png" onmouseover="this.src='images/liicon2.png'" onmouseout="this.src='images/liicon1.png'"></a></li>
-        <li style="display:inline"><a href="#" title="google+"><img class="" src="images/goicon1.png" alt="g+" onmouseover="this.src='images/goicon2.png'" onmouseout="this.src='images/goicon1.png'"></a></li>
+        <li style="display:inline"><a href="#" title="facebook"><img   class="" src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/fbicon1.png?raw=true" onmouseover="this.src='https://github.com/shubhampatwa/careforyou/blob/master/public/images/fbicon2.png?raw=true'" onmouseout="this.src='https://github.com/shubhampatwa/careforyou/blob/master/public/images/fbicon1.png?raw=true'"></a></li>
+         <li style="display:inline"><a href="#" title="twitter"><img class="" src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/twicon1.png?raw=true" onmouseover="this.src='https://github.com/shubhampatwa/careforyou/blob/master/public/images/twicon2.png?raw=true'" onmouseout="this.src='https://github.com/shubhampatwa/careforyou/blob/master/public/images/twicon1.png?raw=true'"></a></li>
+        <li style="display:inline"><a href="#" title="linkedin"><img class="" src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/liicon1.png?raw=true" onmouseover="this.src='https://github.com/shubhampatwa/careforyou/blob/master/public/images/liicon2.png?raw=true'" onmouseout="this.src='https://github.com/shubhampatwa/careforyou/blob/master/public/images/liicon1.png?raw=true'"></a></li>
+        <li style="display:inline"><a href="#" title="google+"><img class="" src="https://github.com/shubhampatwa/careforyou/blob/master/public/images/goicon1.png?raw=true" alt="g+" onmouseover="this.src='https://github.com/shubhampatwa/careforyou/blob/master/public/images/goicon2.png?raw=true'" onmouseout="this.src='https://github.com/shubhampatwa/careforyou/blob/master/public/images/goicon1.png?raw=true'"></a></li>
       
     </ul>
 
