--- a/diseases.html
+++ b/diseases.html
@@ -108,7 +108,7 @@ $(document).ready(function(){
       
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a style="color:#4492d2;" href="index.html">Home</a></li>
+        <li><a style="color:#4492d2;" href="home.html">Home</a></li>
         <li  class="active"><a style="color:#4492d2;" href="diseases.html">Diseases</a></li>
         <li><a style="color:#4492d2;" href="medicine.html">Medicines</a></li>
         <li><a style="color:#4492d2;" href="forum.html">Forum</a></li>
